--- a/rainfall model.ipynb
+++ b/rainfall model.ipynb
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1144,29 +1144,29 @@
        "[350 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test= models.predict(x_test).flatten()\n",
-    "results=pd.DataFrame(data={\"Actuals\":y_test, \"Prediction\": test,})\n",
+    "test_results=pd.DataFrame(data={\"Actuals\":y_test, \"Prediction\": test,})\n",
     "results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e3d28b4a40>"
+       "<matplotlib.legend.Legend at 0x1e3d739e810>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1182,21 +1182,32 @@
     }
    ],
    "source": [
-    "plt.plot(results['Actuals'])\n",
-    "plt.plot(results['Prediction'])\n",
-    "plt.legend(results, loc= \"upper left\")"
+    "plt.plot(test_results['Actuals'])\n",
+    "plt.plot(test_results['Prediction'])\n",
+    "plt.legend(test_results, loc= \"upper left\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9969554543495178"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "true = results['Actuals']\n",
-    "predicted = results['Prediction']\n",
+    "true = test_results['Actuals']\n",
+    "predicted = test_results['Prediction']\n",
     "\n",
     "r2_score(true, predicted)"
    ]
